first test added, not workng yet

--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "fua.module.time",
-  "version": "1.0.0",
+  "version": "0.0.3",
   "description": "",
   "main": "src/module.time.js",
   "dependencies": {},
+  "devDependencies": {
+    "jest": "26.1.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "jest": {
     "rootDir": "test",
-    "verbose": false,
+    "verbose": true,
     "testRegex": "(\\.|/)test\\.js$"
   },
   "repository": {
