--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "src/module.time.js",
   "dependencies": {},
   "devDependencies": {
-    "jest": "26.1.0"
+    "mocha": "^8.2.1",
+    "expect": "^26.6.2"
   },
   "scripts": {
-    "test": "jest"
+    "test": "mocha"
   },
-  "jest": {
-    "rootDir": "test",
-    "verbose": true,
-    "testRegex": "(\\.|/)test\\.js$"
+  "mocha": {
+    "bail": false,
+    "recursive": false,
+    "spec": "test/*.test.js"
   },
   "repository": {
     "type": "git",
