added addon easter to package.json

--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
   "name": "@nrd/fua.module.time",
   "version": "1.0.0",
   "description": "",
-  "main": "src/module.time.js",
+  "exports": {
+    ".": {
+      "require": "./src/module.time.js"
+    },
+    "./addon/easter": {
+      "require": "./addon/easter/src/module.time.addon.easter.js"
+    }
+  },
   "files": [
-    "src/*"
+    "src/*",
+    "addon/easter/src/*"
   ],
   "devDependencies": {
     "mocha": "^8.2.1",
