--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@git02.int.nsc.ag:10022/research/fua/lib/module.time.git"
+    "url": "ssh://git@git02.int.nsc.ag:10022/research/fua/module/time.git"
   },
   "keywords": [
     "time",
